# alc-calc

./: .gitignore  Cargo.toml  README.md  flake.nix  garnix.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: build.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  keybinds.md  theming_guide.md
nix/: build.nix  deps.nix  format.nix  overlay.nix  package.nix  shell.nix  shellHook.nix
os/: bundle-linux  bundle-mac  bundle-windows.ps1  installer.nsi
os/linux/: alc-calc.desktop
script/: build  bundle-linux  bundle-mac  bundle-windows.ps1  format
src/: calc.rs  input.rs  lib.rs  main.rs  titlebar.rs  types.rs  ui.rs
src/ui/: assets.rs  button.rs  card.rs  comp.rs  dropdown.rs  icon.rs  ingredient.rs  input.rs  menu.rs  table.rs  theme.rs  theme_menu.rs  titlebar.rs  util.rs  view.rs  window.rs  window_border.rs
src/ui/comp/: button.rs  dropdown.rs  icon.rs  toast.rs  tooltip.rs
src/ui/comp/input/: cursor_state.rs  text_element.rs  text_input.rs
src/ui/input/: cursor_state.rs  text_element.rs  text_input.rs
src/ui/table/: data_table.rs  ingredient.rs
src/ui/util/: app_menu.rs  ctrl.rs  str.rs  theme.rs  window.rs
src/ui/view/: menu.rs  titlebar.rs  toast.rs
src/ui/view/table/: data_table.rs  ingredient.rs
