# SPDX-FileCopyrightText: Camden Boren
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "alc-calc"
version = "0.1.0"
edition = "2024"
authors = ["Camden Boren"]
description = "alc-calc is a GUI calculator for measuring alcoholic beverages by weight, not volume"

[dependencies]
strum = { version = "0.27.2", default-features = false }
strum_macros = { version = "0.27.2", default-features = false }
gpui = { git = "https://github.com/zed-industries/zed", rev = "fb1f9d12127fe3177cc2231b876095c6850512ae", features = [
  "test-support",
] }
gpui_macros = { git = "https://github.com/zed-industries/zed", rev = "fb1f9d12127fe3177cc2231b876095c6850512ae" }
unicode-segmentation = { version = "1.12.0", default-features = false }
toml = "0.9.5"
serde = { version = "1.0.219", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
rust-embed = { version = "8.7.2", default-features = false }
dirs = { version = "6.0.0", default-features = false }

[package.metadata.packager]
before-packaging-command = "cargo build --release"
icons = ["img/brand/app-icon.ico"]
resources = ["img/brand/app-icon.ico"]

[package.metadata.packager.nsis]
template = "os/installer.nsi"
installer-icon = "img/brand/app-icon.ico"

[package.metadata.bundle]
category = "Utility"
identifier = "io.github.camdenboren.alc-calc"
icon = ["img/brand/app-icon@2x.png", "img/brand/app-icon.png"]
