# SPDX-FileCopyrightText: Camden Boren
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "alc-calc"
version = "0.1.0"
edition = "2024"
authors = ["Camden Boren"]
description = "alc-calc is a GUI calculator for measuring alcoholic beverages by weight, not volume"

[dependencies]
strum = { version = "0.27.2", default-features = false }
strum_macros = { version = "0.27.2", default-features = false }
unicode-segmentation = { version = "1.12.0", default-features = false }
toml = "0.9.11"
serde = { version = "1.0.228", default-features = false }
anyhow = { version = "1.0.100", default-features = false }
rust-embed = { version = "8.10.0", default-features = false }
dirs = { version = "6.0.0", default-features = false }
gpui = { version = "0.2.2", default-features = false, features = [
  "test-support",
  "windows-manifest",
] }
gpui-macros = { version = "0.2.2", default-features = false }

[features]
runtime_shaders = ["gpui/runtime_shaders"]

[package.metadata.packager]
before-packaging-command = "cargo build --release"
icons = ["img/brand/app-icon.ico"]
resources = ["img/brand/app-icon.ico"]

[package.metadata.packager.nsis]
template = "os/installer.nsi"
installer-icon = "img/brand/app-icon.ico"

[package.metadata.bundle]
category = "Utility"
identifier = "io.github.camdenboren.alc-calc"
icon = ["img/brand/app-icon@2x.png", "img/brand/app-icon.png"]
